fix letter cutting off

--- a/src/player/index.css
+++ b/src/player/index.css
@@ -52,4 +52,5 @@
   color: var(--song-text-color);
   font-size: 2.4rem;
   font-weight: 700;
+  line-height: 1.2;
 }
